--- a/SpotifyAngular/angular.json
+++ b/SpotifyAngular/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./src/assets/fonts/material-icons/material-icons.css"
             ],
             "scripts": []
           },
